cmake_minimum_required(VERSION 4.1)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 20)

add_executable(CLionProjects main.cpp
        Capter_1/topic_1.3/Examples/problem1.cpp
        Capter_1/topic_1.3/Examples/problem2.cpp
        Capter_1/topic_1.3/Examples/problem3.cpp
        Capter_1/topic_1.3/Examples/problem4.cpp
        Capter_1/topic_1.3/Examples/problem5.cpp
        Capter_1/topic_1.4/Examples/problem1.cpp
        Capter_1/topic_1.4/Examples/problem2.cpp
        Capter_1/topic_1.4/Exercises/1.cpp
        Capter_1/topic_1.5/Examples/1.cpp
        Capter_1/topic_1.5/Examples/2.cpp
        Capter_1/topic_1.5/Examples/problem3.cpp
)
