cmake_minimum_required(VERSION 4.1)
project(CLionProjects)

set(CMAKE_CXX_STANDARD 20)

add_executable(CLionProjects main.cpp
        Capter_1/topic_1.3/Examples/problem1.cpp
        Capter_1/topic_1.3/Examples/problem2.cpp
        Capter_1/topic_1.3/Examples/problem3.cpp
        Capter_1/topic_1.3/Examples/problem4.cpp
        Capter_1/topic_1.3/Examples/problem5.cpp
        Capter_1/topic_1.4/Examples/problem1.cpp
        Capter_1/topic_1.4/Examples/problem2.cpp
        Capter_1/topic_1.4/Exercises/Q1.cpp
        Capter_1/topic_1.5/Examples/Q1.cpp
        Capter_1/topic_1.5/Examples/Q2.cpp
        Capter_1/topic_1.5/Examples/Q3.cpp
        Capter_1/topic_1.6/Examples/problem1.cpp
        Capter_1/topic_1.6/Examples/problem2.cpp
        Capter_1/topic_1.6/Exercises/problem1.cpp
        Capter_1/topic_1.6/Exercises/problem2.cpp
        Capter_1/topic_1.7/examples/problem1.cpp
        Capter_1/topic_1.7/examples/problem2.cpp
        Capter_1/topic_1.7/examples/problem3.cpp
        Capter_1/topic_1.7/exercises/problem1.cpp
        Capter_1/topic_1.7/exercises/problem2.cpp
        Capter_1/topic_1.3/Exercises/Q1.cpp
        Capter_1/topic_1.3/Exercises/Q2.cpp
        Capter_1/topic_1.3/Exercises/Q3.cpp
        Capter_1/topic_1.5/Exercises/Q1.cpp
        Capter_1/topic_1.5/Exercises/Q2.cpp
        Capter_1/topic_1.5/Exercises/Q3.cpp
        Capter_2/topic_2.1/Exercises/Q1.cpp
        Capter_2/topic_2.1/Exercises/Q2.cpp
        Capter_2/topic_2.1/Exercises/Q3.cpp
        Capter_2/topic_2.2/Exercises/Q1.cpp
        Capter_2/topic_2.2/Exercises/Q2.cpp
        Capter_2/topic_2.2/Exercises/Q3.cpp
        Capter_2/topic_2.3/Exercices/Q1.cpp
        capter_3/topic_3.1/Exercises/Q1.cpp
        capter_3/topic_3.1/Exercises/Q2.cpp
        capter_3/topic_3.2/Exercises/Q1.cpp
        capter_3/topic_3.3/Q1.cpp
        capter_3/topic_3.3/Q2.cpp
        Capter_2/topic_2.1/Example/topic_2.1/Q1.cpp
        Capter_2/topic_2.1/Example/topic_2.1/Q2.cpp
        Capter_2/topic_2.1/Example/topic_2.1/Q3.cpp
        Capter_2/topic_2.2/Examples/Q1.cpp
        Capter_2/topic_2.2/Examples/Q2.cpp
        Capter_2/topic_2.2/Examples/Q3.cpp
        Capter_2/topic_2.3/Examples/Q1.cpp
        Capter_2/topic_2.4/Q1.cpp
        Capter_2/topic_2.5/Q1.cpp
        Capter_2/topic_2.5/Q2.cpp
        Capter_2/topic_2.5/Q3.cpp
        Capter_2/topic_2.6/Q1.cpp
        Capter_2/topic_2.6/Q2.cpp
)
